--- a/src/_inc/_main.html
+++ b/src/_inc/_main.html
@@ -1,4 +1,4 @@
-<section class="b-main">
+<section class="b-main row">
     <div class="b-main__cnt cnt">
         <h1 class="b-main__offer">Первый В2В Маркетплейс Узлов и<br> Деталей для подвижного состава
         </h1>
