--- a/src/_inc/_starting.html
+++ b/src/_inc/_starting.html
@@ -1,4 +1,4 @@
-<section class="b-starting">
+<section class="b-starting row">
     <div class="b-starting__cnt cnt">
         <div class="b-starting__header">
             <h2 class="b-starting__title">Как начать работать?</h2>
