--- a/src/_inc/_header.html
+++ b/src/_inc/_header.html
@@ -1,4 +1,4 @@
-<header class="b-header row">
+<header class="b-header is-active row">
     <div class="b-header__cnt cnt">
         <a href="/" class="b-header__logo-link">
             <img src="/images/logo.png" alt="" class="b-header__logo">
@@ -20,6 +20,10 @@
         <div class="b-header__links songer">
             <a href="#" class="b-header__link b-header__link_catalog"><span>Перейти в каталог</span></a>
             <a href="#" class="b-header__link b-header__link_lk"><span>Личный кабинет</span></a>
+        </div>
+
+        <div class="b-header__ham">
+            @@include('_hamburger.html')
         </div>
     </div>
 </header>
