ховеры и скролл по навигации

--- a/src/_inc/_contacts.html
+++ b/src/_inc/_contacts.html
@@ -1,4 +1,4 @@
-<section class="b-contacts">
+<section class="b-contacts" id="contacts">
     <div class="b-contacts__cnt cnt">
         <div class="b-contacts__header">
             <h2 class="b-contacts__title">Контакты</h2>
