--- a/src/_inc/_header.html
+++ b/src/_inc/_header.html
@@ -7,13 +7,13 @@
         <nav class="b-header__nav b-nav">
             <ul class="b-nav__list">
                 <li class="b-nav__item">
-                    <a href="" class="b-nav__link"><span>Как начать работать</span></a>
-                </li>
-                <li class="b-nav__item is-active">
-                    <a href="" class="b-nav__link"><span>Как работать с сайтом</span></a>
+                    <a href="#starting" class="b-nav__link js-nav-link"><span>Как начать работать</span></a>
                 </li>
                 <li class="b-nav__item">
-                    <a href="" class="b-nav__link"><span>Контакты</span></a>
+                    <a href="#how-to" class="b-nav__link js-nav-link"><span>Как работать с сайтом</span></a>
+                </li>
+                <li class="b-nav__item">
+                    <a href="#contacts" class="b-nav__link js-nav-link"><span>Контакты</span></a>
                 </li>
             </ul>
         </nav>
