--- a/src/_inc/_howto.html
+++ b/src/_inc/_howto.html
@@ -1,4 +1,4 @@
-<section class="b-howto row">
+<section class="b-howto row" id="how-to">
     <div class="b-howto__cnt cnt">
         <h2 class="b-howto__title">Как работать с маркетплейсом? </h2>
 
