--- a/src/_inc/_main.html
+++ b/src/_inc/_main.html
@@ -11,10 +11,7 @@
         <div class="b-main__actions">
             <a href="#" class="b-main__action_begin ui-btn ui-btn_primary ui-btn_huge songer">Начать использовать</a>
             <div class="b-main__action_video b-main__video">
-                <div class="b-video">
-                    <span class="b-video__desc"></span>
-                    <button class="b-video__button ui-btn ui-btn__play"></button>
-                </div>
+                @@include('_main_video.html')
             </div>
         </div>
     </div>
