--- a/src/_inc/_starting.html
+++ b/src/_inc/_starting.html
@@ -1,4 +1,4 @@
-<section class="b-starting row">
+<section class="b-starting row" id="starting">
     <div class="b-starting__cnt cnt">
         <div class="b-starting__header">
             <h2 class="b-starting__title">Как начать работать?</h2>
@@ -15,6 +15,7 @@
                 <a href="#" class="b-starting-step b-starting-step_1">
                     <span class="b-starting-step__title">Шаг 01</span>
                     <span class="b-starting-step__desc">Зарегистрировать <br>учетную запись</span>
+                    <img class="b-starting-step__img" src="images/b-starting-step_key.png" />
                 </a>
                 <a href="#" class="b-starting-step b-starting-step_2">
                     <span class="b-starting-step__title">Шаг 02</span>
