--- a/src/_inc/_contacts.html
+++ b/src/_inc/_contacts.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="b-contacts__map">
-            <img src="/images/temp_map2.jpg" alt="">
+            <iframe style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3A91277b548a151c7e933c6b0ae8cc122897b0b324a5a57f0ddf74e3a4bed34bdf&amp;source=constructor" width="100%" height="380" frameborder="0"></iframe>
         </div>
         <div class="b-contacts__footer">
             <a href="#" class="b-contacts-footer-link b-contacts-footer-link_policy">Политика конфиденциальности</a>
