--- a/src/_inc/_howto.html
+++ b/src/_inc/_howto.html
@@ -32,7 +32,9 @@
                         <h4 class="mb-1e">Функционал клиента <br>«Карта»</h4>
                         <p>Товарищи! укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Таким образом сложившаяся структура организации способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач. Равным образом рамки и место обучения кадров обеспечивает широкому кругу (специалистов).</p>
                     </div>
-                    <div class="map"><img src="/images/temp_map.jpg" alt=""></div>
+                    <div class="map">
+                        <div id="map"></div>
+                    </div>
                 </div>
             </div>
 
