Добавлен fancybox Добавлено видео

--- a/src/_inc/_main_video.html
+++ b/src/_inc/_main_video.html
@@ -1,7 +1,7 @@
 <div class="b-video">
     <span class="b-video__desc">Смотреть видео <br>об ICOMPLECT</span>
-    <button class="b-video__button ui-btn ui-btn_play">
+    <a class="b-video__button ui-btn ui-btn_play data-fancybox" data-fancybox data-video="FWG0El6UNKo" href="https://www.youtube.com/watch?v=FWG0El6UNKo">
         <span class="rounds"></span>
         <i class="icon icon_play"></i>
-    </button>
+    </a>
 </div>
