--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css?cache=a5">
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-
+    <!-- <link  href="/path/to/jquery.fancybox.min.css" rel="stylesheet">
+    <script src="/path/to/jquery.fancybox.min.js"></script> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
 <body>
   @@include('_inc/_header.html')
@@ -19,7 +21,10 @@
 
 
 
+  {# <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script> #}
   <script src="/js/vendors~main.bundle.js?cache=a3"></script>
+  
+  {# <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script> #}
   <script src="/js/bundle.js?cache=a4" ></script>
 </body>
 </html>
