--- a/src/_inc/_contacts.html
+++ b/src/_inc/_contacts.html
@@ -18,8 +18,8 @@
             <iframe style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3A91277b548a151c7e933c6b0ae8cc122897b0b324a5a57f0ddf74e3a4bed34bdf&amp;source=constructor" width="100%" height="380" frameborder="0"></iframe>
         </div>
         <div class="b-contacts__footer">
-            <a href="#" class="b-contacts-footer-link b-contacts-footer-link_policy">Политика конфиденциальности</a>
-            <a href="#" class="b-contacts-footer-link b-contacts-footer-link_external">Перейти на маркетплейс</a>
+            <a data-fancybox-type="iframe" href="/images/policy.pdf" class="b-contacts-footer-link b-contacts-footer-link_policy js-fancy-pdf">Политика конфиденциальности</a>
+            <a href="https://icomplect.com/catalog/" target="_blank" class="b-contacts-footer-link b-contacts-footer-link_external">Перейти на маркетплейс</a>
             <span href="#" class="b-contacts-footer-link b-contacts-footer-link_copyright">© ICOMPLECT 2020, все права защищены</span>
         </div>
     </div>
