--- a/src/_inc/_header.html
+++ b/src/_inc/_header.html
@@ -18,8 +18,8 @@
             </ul>
         </nav>
         <div class="b-header__links songer">
-            <a href="#" class="b-header__link b-header__link_catalog"><span>Перейти в каталог</span></a>
-            <a href="#" class="b-header__link b-header__link_lk"><span>Личный кабинет</span></a>
+            <a target="_blank" href="https://icomplect.com/catalog/" class="b-header__link b-header__link_catalog"><span>Перейти в каталог</span></a>
+            <a target="_blank" href="https://icomplect.com/login/" class="b-header__link b-header__link_lk"><span>Личный кабинет</span></a>
         </div>
 
         <div class="b-header__ham">
