--- a/src/_inc/_main.html
+++ b/src/_inc/_main.html
@@ -9,7 +9,7 @@
 
 
         <div class="b-main__actions">
-            <a href="#" class="b-main__action_begin ui-btn ui-btn_primary ui-btn_huge songer">Начать использовать</a>
+            <a href="https://icomplect.com/registration" target="_blank" class="b-main__action_begin ui-btn ui-btn_primary ui-btn_huge songer">Начать использовать</a>
             <div class="b-main__action_video b-main__video">
                 @@include('_main_video.html')
             </div>
