--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>iComplect</title>
     <link rel="icon" href="/images/favicon.gif" type="image/png">
     <link rel="stylesheet" href="/css/style.css?cache=a8">
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <!script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></!script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
 <body>
@@ -21,7 +21,8 @@
 
 
   
-  <script src="/js/vendors~main.bundle.js?cache=a5"></script>
-  <script src="/js/bundle.js?cache=a5" ></script>
+  <!-- <script src="/js/vendors~main.bundle.js?cache=a5"></script>!-->
+  < src="/js/1.bundle.js?cache=a5" ></>
+  < src="/js/bundle.js?cache=a5" ></>
 </body>
 </html>
