--- a/src/_inc/_header.html
+++ b/src/_inc/_header.html
@@ -1,7 +1,7 @@
 <header class="b-header is-active row">
     <div class="b-header__cnt cnt">
         <a href="/" class="b-header__logo-link">
-            <img src="/images/logo.png" alt="" class="b-header__logo">
+            <img src="/images/logo.jpg" alt="" class="b-header__logo">
         </a>
 
         <nav class="b-header__nav b-nav">
