--- a/src/_inc/_starting.html
+++ b/src/_inc/_starting.html
@@ -44,15 +44,16 @@
                         </a>
                         <a href="#" class="b-starting-step b-starting-step_2">
                             <span class="b-starting-step__title">Шаг 02</span>
-                            <span class="b-starting-step__desc">Предложи узлы и запчасти <br>рынку (от одной единицы <br>до большого перечня)</span>
+                            <span class="b-starting-step__desc">
+                                Изучи цены и наличие представленных на сайте <br>ж/д узлов и деталей (с помощью фильтра)</span>
                         </a>
                         <a href="#" class="b-starting-step b-starting-step_3">
                             <span class="b-starting-step__title">Шаг 03</span>
-                            <span class="b-starting-step__desc">Начни торговать (продай <br>с любого из складов)</span>
+                            <span class="b-starting-step__desc">Оформи Заказ на сайте <br>на нужном складе</span>
                         </a>
                         <a href="#" class="b-starting-step b-starting-step_4">
                             <span class="b-starting-step__title">Шаг 04</span>
-                            <span class="b-starting-step__desc">Управляй своими складскими <br>запасами (онлайн мониторинг)</span>
+                            <span class="b-starting-step__desc">Обменивайся документами с Продавцом <br>(ООО «ЦТП Комплект») <br>и отслеживай этапы сделки в <br>Личном кабинете</span>
                         </a>
                         </div>
                 </div>
