--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>iComplect</title>
     <link rel="icon" href="/images/favicon.gif" type="image/png">
-    <link rel="stylesheet" href="/css/style.css?cache=a8">
-    <!script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></!script>
+    <link rel="stylesheet" href="/css/style.css?cache=b1">
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
 <body>
@@ -16,13 +16,9 @@
   @@include('_inc/_why.html')
   @@include('_inc/_starting.html')
   @@include('_inc/_howto.html')
-  @@include('_inc/_contacts.html')
-
-
-
-  
-  <!-- <script src="/js/vendors~main.bundle.js?cache=a5"></script>!-->
-  < src="/js/1.bundle.js?cache=a5" ></>
-  < src="/js/bundle.js?cache=a5" ></>
+  @@include('_inc/_contacts.html')  
+  <script src="/js/vendors~main.bundle.js?cache=a8"></script>
+  <!-- <script src="/js/1.bundle.js?cache=a5" ></script> -->
+  <script src="/js/bundle.js?cache=a7" ></script>
 </body>
 </html>
