--- a/src/_inc/_contacts.html
+++ b/src/_inc/_contacts.html
@@ -2,20 +2,18 @@
     <div class="b-contacts__cnt cnt">
         <div class="b-contacts__header">
             <h2 class="b-contacts__title">Контакты</h2>
-            <span class="b-contacts__address"><i class="icon icon_address"></i>117342, Москва город, улица Профсоюзная, <br>
-                дом 65, корпус 1, Эт 18 пом XLIV ком 5.06</span>
+            <span class="b-contacts__address"><i class="icon icon_address"></i>117342, Москва, улица Профсоюзная, <br>дом 65, корпус 1, Эт 18 пом XLIV ком 5.06</span>
             <a href="tel:+74952490117" class="b-contacts__phone"><i class="icon icon_phone"></i>+7 (495) 249-01-17</a>
             <div class="b-contacts__requisites">
                 <span>ООО "ЦТП Комплект" <br>
                     ОГРН: 5187746014143 <br>
-                    ИНН: 7728455599 <br></span>
-                <span>
+                    ИНН: 7728455599 <br>
                     КПП: 772801001 <br>ОКПО: 35053659
                 </span>
             </div>
         </div>
         <div class="b-contacts__map">
-            <iframe style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3A91277b548a151c7e933c6b0ae8cc122897b0b324a5a57f0ddf74e3a4bed34bdf&amp;source=constructor" width="100%" height="380" frameborder="0"></iframe>
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A91277b548a151c7e933c6b0ae8cc122897b0b324a5a57f0ddf74e3a4bed34bdf&amp;source=constructor" width="100%" height="380" frameborder="0"></iframe>
         </div>
         <div class="b-contacts__footer">
             <a data-fancybox-type="iframe" href="/images/policy.pdf" class="b-contacts-footer-link b-contacts-footer-link_policy js-fancy-pdf">Политика конфиденциальности</a>
