--- a/src/_inc/_howto.html
+++ b/src/_inc/_howto.html
@@ -3,7 +3,7 @@
         <h2 class="b-howto__title">Как работать с маркетплейсом? </h2>
 
         <div class="b-howto__navbar">
-            <a href="#" class="b-howto-nav-link is-active js-tab" data-target-tab="how-to-tab-1">
+            <a href="#" class="b-howto-nav-link js-tab is-active" data-target-tab="how-to-tab-1">
                 <span class="b-howto-nav-link__num">01</span>
                 <span class="b-howto-nav-link__text">Карта</span>
             </a>
@@ -27,41 +27,20 @@
 
         <div class="b-howto__content">
             <div class="js-tab-content is-active" id="how-to-tab-1">
-                <div class="b-howto-cont b-howto-cont_map">
-                    <div class="text pt-1-5e">
-                        <h4 class="mb-1e">Функционал клиента <br>«Карта»</h4>
-                        <p>Товарищи! укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Таким образом сложившаяся структура организации способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач. Равным образом рамки и место обучения кадров обеспечивает широкому кругу (специалистов).</p>
-                    </div>
-                    <div class="map">
-                        <div id="map"></div>
-                    </div>
-                </div>
+                @@include('_howto-text-1.html')
             </div>
-
-            <div class="js-tab-content" id="how-to-tab-2">
-                <div class="b-howto-cont b-howto-cont_map">
-                    <div class="text pt-1-5e">
-                        <h4 class="mb-1e">Функционал клиента <br>«Карта»</h4>
-                        <p>Товарищи! укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Таким образом сложившаяся структура организации способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач. Равным образом рамки и место обучения кадров обеспечивает широкому кругу (специалистов).</p>
-                    </div>
-                    <div class="map"><img src="/images/temp_map.jpg" alt=""></div>
-                </div>
+            <div class="js-tab-content " id="how-to-tab-2">
+                @@include('_howto-text-2.html')
             </div>
             <div class="js-tab-content" id="how-to-tab-3">
-                <div style="width: 100%; height: 200px; background: rgba(0,0,0, 0.6)"></div>
+                @@include('_howto-text-3.html')
             </div>
             <div class="js-tab-content" id="how-to-tab-4">
-                <div style="width: 100%; height: 200px; background: rgba(0,0,0, 0.4)"></div>
+                @@include('_howto-text-4.html')
             </div>
             <div class="js-tab-content" id="how-to-tab-5">
-                <div style="width: 100%; height: 200px; background: rgba(0,0,0, 0.2)"></div>
+                @@include('_howto-text-5.html')
             </div>
-            
-            <!--
-            <div class="b-howto__item b-howto__item_"></div>
-            <div class="b-howto__item b-howto__item_"></div>
-            <div class="b-howto__item b-howto__item_"></div>
-            -->
         </div>
     </div>
 </section>
