Добавлен контент. Готовая версия

--- a/src/_inc/_howto-text-3.html
+++ b/src/_inc/_howto-text-3.html
@@ -1,10 +1,10 @@
 <div class="b-howto-cont b-howto-cont_map">
-    <div class="cnt p-0">
-        <div class="pb-1e pt-0-5e gr-12-md gr-3-xl gr-3-xxl">
+    <div class="cnt no-wrap-lg wrap p-0">
+        <div class="pb-1e pt-0-5e gr-12-xs gr-4-lg gr-3-xl">
             <h4 class="mb-1e">«Мои запчасти»</h4>
             <p>Для зарегистрированных пользователей доступен раздел «Мои запчасти», в интерфейсе которого доступен функционал размещения предложений узлов и деталей к продаже на сайте. Через кнопку «Добавить запчасть» достаточно просто размещать единичные предложения. Особое внимание стоит обратить на то, что к продаже через iComplect могут быть приняты только детали с определенными номерами, размещение к продаже лотов не принимается. В случае необходимости загрузки информации о продаже большого количества деталей необходимо направить файл с пономерным перечнем позиций на емэйл info@icomplect.com в формате Excel  и максимально подробной информацией для загрузки деталей Менеджером площадки.</p>
         </div>
-        <div class="fg-1 flex to-right"><img class="" src="/images/b-howto-img-2.jpg" alt=""></div>
+        <div class="fg-1 flex gr-12-xs gr-8-lg gr-9-xl to-right-md to-center-xs"><img class="" src="/images/b-howto-img-2.jpg" alt=""></div>
 
     </div>
 </div>
